// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar component test value - -50, showValue - false, style - {"height": 10, "width": 100} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 10,
        "width": 100,
      },
      false,
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  />
</View>
`;

exports[`ProgressBar component test value - -50, showValue - false, style - {"height": 20, "width": 150} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 20,
        "width": 150,
      },
      false,
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  />
</View>
`;

exports[`ProgressBar component test value - -50, showValue - true, style - {"height": 10, "width": 100} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 10,
        "width": 100,
      },
      {
        "height": 14,
      },
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontFamily": "TT Fellows",
          "fontSize": 10.5,
          "textAlign": "center",
        }
      }
    >
      0
       %
    </Text>
  </View>
</View>
`;

exports[`ProgressBar component test value - -50, showValue - true, style - {"height": 20, "width": 150} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 20,
        "width": 150,
      },
      {
        "height": 14,
      },
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontFamily": "TT Fellows",
          "fontSize": 10.5,
          "textAlign": "center",
        }
      }
    >
      0
       %
    </Text>
  </View>
</View>
`;

exports[`ProgressBar component test value - 0, showValue - false, style - {"height": 10, "width": 100} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 10,
        "width": 100,
      },
      false,
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  />
</View>
`;

exports[`ProgressBar component test value - 0, showValue - false, style - {"height": 20, "width": 150} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 20,
        "width": 150,
      },
      false,
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  />
</View>
`;

exports[`ProgressBar component test value - 0, showValue - true, style - {"height": 10, "width": 100} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 10,
        "width": 100,
      },
      {
        "height": 14,
      },
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontFamily": "TT Fellows",
          "fontSize": 10.5,
          "textAlign": "center",
        }
      }
    >
      0
       %
    </Text>
  </View>
</View>
`;

exports[`ProgressBar component test value - 0, showValue - true, style - {"height": 20, "width": 150} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 20,
        "width": 150,
      },
      {
        "height": 14,
      },
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontFamily": "TT Fellows",
          "fontSize": 10.5,
          "textAlign": "center",
        }
      }
    >
      0
       %
    </Text>
  </View>
</View>
`;

exports[`ProgressBar component test value - 50, showValue - false, style - {"height": 10, "width": 100} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 10,
        "width": 100,
      },
      false,
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  />
</View>
`;

exports[`ProgressBar component test value - 50, showValue - false, style - {"height": 20, "width": 150} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 20,
        "width": 150,
      },
      false,
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  />
</View>
`;

exports[`ProgressBar component test value - 50, showValue - true, style - {"height": 10, "width": 100} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 10,
        "width": 100,
      },
      {
        "height": 14,
      },
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontFamily": "TT Fellows",
          "fontSize": 10.5,
          "textAlign": "center",
        }
      }
    >
      50
       %
    </Text>
  </View>
</View>
`;

exports[`ProgressBar component test value - 50, showValue - true, style - {"height": 20, "width": 150} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 20,
        "width": 150,
      },
      {
        "height": 14,
      },
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontFamily": "TT Fellows",
          "fontSize": 10.5,
          "textAlign": "center",
        }
      }
    >
      50
       %
    </Text>
  </View>
</View>
`;

exports[`ProgressBar component test value - 100, showValue - false, style - {"height": 10, "width": 100} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 10,
        "width": 100,
      },
      false,
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  />
</View>
`;

exports[`ProgressBar component test value - 100, showValue - false, style - {"height": 20, "width": 150} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 20,
        "width": 150,
      },
      false,
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  />
</View>
`;

exports[`ProgressBar component test value - 100, showValue - true, style - {"height": 10, "width": 100} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 10,
        "width": 100,
      },
      {
        "height": 14,
      },
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontFamily": "TT Fellows",
          "fontSize": 10.5,
          "textAlign": "center",
        }
      }
    >
      100
       %
    </Text>
  </View>
</View>
`;

exports[`ProgressBar component test value - 100, showValue - true, style - {"height": 20, "width": 150} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 20,
        "width": 150,
      },
      {
        "height": 14,
      },
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontFamily": "TT Fellows",
          "fontSize": 10.5,
          "textAlign": "center",
        }
      }
    >
      100
       %
    </Text>
  </View>
</View>
`;

exports[`ProgressBar component test value - 150, showValue - false, style - {"height": 10, "width": 100} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 10,
        "width": 100,
      },
      false,
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  />
</View>
`;

exports[`ProgressBar component test value - 150, showValue - false, style - {"height": 20, "width": 150} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 20,
        "width": 150,
      },
      false,
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  />
</View>
`;

exports[`ProgressBar component test value - 150, showValue - true, style - {"height": 10, "width": 100} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 10,
        "width": 100,
      },
      {
        "height": 14,
      },
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontFamily": "TT Fellows",
          "fontSize": 10.5,
          "textAlign": "center",
        }
      }
    >
      100
       %
    </Text>
  </View>
</View>
`;

exports[`ProgressBar component test value - 150, showValue - true, style - {"height": 20, "width": 150} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 100,
        "overflow": "hidden",
      },
      {
        "height": 20,
        "width": 150,
      },
      {
        "height": 14,
      },
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": "0",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "height": "100%",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "width": 0,
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontFamily": "TT Fellows",
          "fontSize": 10.5,
          "textAlign": "center",
        }
      }
    >
      100
       %
    </Text>
  </View>
</View>
`;
